Phase5/negative_tests/prog16.dlp
//Main method does not have int return type

void main() {
    return;
}